@@ -1,15 +1,18 @@
 
-#
 # Copyright (c) 2016 Google, Inc.
+# Written by Mike Klein and Matt Sarett
+# Derived from the ARM supporting code in libpng/Makefile.am, which was
+# Copyright (c) 2004-2015 Glenn Randers-Pehrson
+#
+# Last changed in libpng 1.6.22 [(PENDING RELEASE)]
 #
 # This code is released under the libpng license.
 # For conditions of distribution and use, see the disclaimer
 # and license in png.h
 #
-
 # In order to compile Intel SSE optimizations for libpng, please add
-# the following code to Makefile.am directly beneath the
-# "if PNG_ARM_NEON ... endif" statement.
+# the following code to Makefile.am under HOST SPECIFIC OPTIONS
+# directly beneath the "if PNG_ARM_NEON ... endif" statement.
 
 if PNG_INTEL_SSE
 libpng@PNGLIB_MAJOR@@PNGLIB_MINOR@_la_SOURCES += contrib/intel/intel_init.c\
